tests/error/self_errors/invalid_annotation2.err
Error: Invalid self annotation (at $FILE:14:21)
   | 
12 | 
13 |     @guppy
14 |     def foo(my_self: int) -> None:
   |                      ^^^ `my_self` must be of type `Foo[?T]`

Guppy compilation failed due to 1 previous error
